# weixue-dog-nano-code

./: .dep_probe_report.txt  .gitignore  API.md  CODE_DOCUMENTATION.md  MIGRATION_PLAN_SCHEME_B_EXECUTION.md  README.md  anger-limit.txt  balance_controller.py  config.json  control_center_unified.py  debug_torque.py  gait_generator.py  kinematics.py  kinematics_v3.py  kinematics_v4.py  kinematics_v5.py  main_trot.py  pyproject.toml  robot_config.py  robot_io.py  servo_control_center.py  servo_ctrl.py  servo_ctrl_win.py  servo_gui.py  setup.py  simulation_ik.py  simulation_ik_v2.py  simulation_ik_v3.py  simulation_ik_v4.py  simulation_ik_v5.py  simulation_step_in_place.py  simulation_trot_interactive.py  simulation_unified.py  tempCodeRunnerFile.py  test_latency_linux.py  test_led_latency.py  test_physical_latency.py  test_single_leg_step.py  test_trot_in_place.py  test_walk_in_place.py
common/config/: robot_config.py
common/io/: robot_io.py  robotio_bridge.py  servo_safety.py  stm32_bridge.py
sim2real_jetson_tests/: 01_env_check.py  02_stm32_state_probe.py  03_single_servo_safe_test.py  04_onnx_latency_smoke_test.py  05_onnx_policy_safe_motion_test.py  TEST_REPORT_2026-03-04_DOCKER_JETSON_RETEST.md  TEST_REPORT_2026-03-04_ONNX_DEPLOY_SAFE_MOTION.md  TEST_REPORT_2026-03-04_ONNX_NO_MOTION_ROOTCAUSE.md  robotio_bridge.py  test_imu_alignment.py
traditional_control_tests/: COORDINATE_AUDIT.md  IMU_OBS_AUDIT_REPORT_20260329_052910.md  PLAN.md  auto_imu_observation_audit.py  test_imu_readout.py
weixue_dog_nano_code.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+93 files in other folders)
