[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weixue-dog-nano-code"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "pyserial",
  "pyyaml",
]

[tool.setuptools.packages.find]
include = ["common*", "rl*", "traditional*"]
